<resources>
    <string name="app_name">LoginAndSignUpOne</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="logo_description">Otaku Notes Logo</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="text_button_create_account">Create Account</string>
    <string name="text_view_create_account">No account yet ? Create One</string>
    <string name="text_view_already_member">Already member ? Login</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
