<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ayndev.loginandsignupone.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        style="@style/MyActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            style="@style/MyInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/MyInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_login" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_view_create_account"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>

</ScrollView>
